# maek

./: .gitignore  .prettierrc  Anchor.toml  CONTRIBUTING.md  FOLDER-STRUCTURE.md  LICENSE  README.md  package-lock.json  package.json  test_runner.sh  tsconfig.json
frontend/admin/: README.md  craco.config.js  package-lock.json  package.json  tailwind.config.js
frontend/admin/src/: App.css  App.tsx  index.css
frontend/admin/src/components/common/: MetricCard.tsx
frontend/admin/src/hooks/: useFundData.ts  useProgram.ts
frontend/admin/src/types/: index.ts
frontend/admin/src/utils/: formatting.ts
frontend/investor/: README.md  package-lock.json  package.json
frontend/investor/src/app/: layout.tsx  page.tsx
mos/: architecture-design.md  design-guidelines.md  product-requirements.md  product-strategy.md
mos/modules/001-core-fund-management/: frontend-ux-guide.md  implementation-plan.md  product-requirements.md  product-strategy.md  technical-design.md  test-analysis-report.md  test-cases-plan.md
programs/buidl-protocol/: Cargo.toml
programs/buidl-protocol/src/: lib.rs
programs/maek-protocol/: Cargo.toml
programs/maek-protocol/src/: error.rs  events.rs  lib.rs
programs/maek-protocol/src/instructions/: admin.rs  deposit.rs  handle_maturity.rs  initialize_fund.rs  invest_fixed_income.rs  mod.rs  update_nav.rs  withdraw.rs
programs/maek-protocol/src/state/: fixed_income_asset.rs  fund_state.rs  mod.rs  user_account.rs
programs/maek-protocol/src/utils/: calculations.rs  mod.rs  validation.rs
tests/: Cargo.toml  test_suite.rs  unit_tests.rs
(+12 files in other folders)
