[package]
name = "buidl-protocol"
version = "0.1.0"
description = "MAEK Protocol smart contracts for decentralized treasury bill investment"
edition = "2021"
license = "MIT"
repository = "https://github.com/maek-finance/maek"
authors = ["MAEK Community"]

[lib]
crate-type = ["cdylib", "lib"]
name = "buidl_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "~1.16.0"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.2", features = ["no-entrypoint"] }
pyth-solana-receiver-sdk = "0.1.0"
switchboard-v2 = "0.4.0"

[dev-dependencies]
solana-program-test = "~1.16.0"
solana-sdk = "~1.16.0"
tokio = { version = "1.0", features = ["macros"] } 