[package]
name = "maek-protocol"
version = "0.1.0"
description = "MAEK Protocol - Open-source tokenized fixed income fund on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "maek_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
spl-token = { version = "4.0", features = ["no-entrypoint"] } 